// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table Toolbar > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-table-toolbar"
  >
    <div
      class="mocked-styled-1 el-table-toolbar-description"
    >
      125 Properties
    </div>
    <div
      class="mocked-styled-2 el-table-toolbar-actions"
    >
      <div
        class="mocked-styled-4 el-menu"
      >
        <button
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          class="el-button-size-small el-button"
          data-variant="tertiary"
          role="button"
        >
          <div
            class="mocked-styled-10 el-button-spinner"
          />
          <span
            class="mocked-styled-11 el-button-label"
          >
            Page size: 25
          </span>
          <span
            class="mocked-styled-16 el-icon"
            style="font-size: 1rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1rem;"
              title="Icon image with name chevronDown"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 16.5041C11.7343 16.5057 11.479 16.4013 11.2904 16.2141L4.29396 9.21411C4.04044 8.96046 3.94142 8.59074 4.03422 8.24424C4.12702 7.89773 4.39753 7.62708 4.74385 7.53424C5.09018 7.44139 5.45971 7.54046 5.71324 7.79411L12 14.0941L18.2868 7.79411C18.6787 7.40199 19.3141 7.40199 19.7061 7.79411C20.098 8.18624 20.098 8.82199 19.7061 9.21411L12.7096 16.2141C12.521 16.4013 12.2657 16.5057 12 16.5041Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table Toolbar > should match snapshot with bulk actions 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-table-toolbar"
  >
    <div
      class="mocked-styled-1 el-table-toolbar-description"
    >
      5 of 125 selected
    </div>
    <div
      class="mocked-styled-2 el-table-toolbar-actions"
    >
      <div
        class="mocked-styled-17 el-button-group"
      >
        <button
          aria-disabled="false"
          class="el-button-size-small el-button"
          role="button"
        >
          <div
            class="mocked-styled-10 el-button-spinner"
          />
          <span
            class="mocked-styled-11 el-button-label"
          >
            Button 1
          </span>
        </button>
        <button
          aria-disabled="false"
          class="el-button-size-small el-button"
          role="button"
        >
          <div
            class="mocked-styled-10 el-button-spinner"
          />
          <span
            class="mocked-styled-11 el-button-label"
          >
            Button 2
          </span>
        </button>
        <button
          aria-disabled="false"
          class="el-button-size-small el-button"
          role="button"
        >
          <div
            class="mocked-styled-10 el-button-spinner"
          />
          <span
            class="mocked-styled-11 el-button-label"
          >
            Button 3
          </span>
        </button>
        <div
          class="mocked-styled-4 el-menu"
        >
          <button
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            class="el-button-size-small el-button-icon-only el-button"
            role="button"
          >
            <div
              class="mocked-styled-10 el-button-spinner"
            />
            <span
              class="mocked-styled-16 el-icon"
              style="font-size: 1rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1rem;"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10C6.10457 10 7 10.8954 7 12Z"
                  fill="currentColor"
                />
                <path
                  d="M12 14C13.1046 14 14 13.1046 14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14Z"
                  fill="currentColor"
                />
                <path
                  d="M19 14C20.1046 14 21 13.1046 21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
